// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchFunnelWidgetGA4 Chart Activate Analytics CTA with button "Complete setup" should render the CTA when Analytics is not connected 1`] = `
<div>
  <div
    class="mdc-layout-grid googlesitekit-search-console-site-stats"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <div
          id="google-chart-mock"
        >
          Impressions
        </div>
      </div>
    </div>
  </div>
  <div
    class="mdc-layout-grid"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell"
      >
        <div
          class="googlesitekit-activate-analytics-cta"
        >
          <div
            class="googlesitekit-activate-analytics-cta__top"
          >
            <div
              class="googlesitekit-activate-analytics-cta__icon"
            >
              <svg />
            </div>
            <p
              class="googlesitekit-activate-analytics-cta__description"
            >
              See how many people visit your site from Search and track how you’re achieving your goals. 
              <a
                aria-label="Learn more (opens in a new tab)"
                class="googlesitekit-cta-link"
                href="https://sitekit.withgoogle.com/support/?doc=ga4"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Learn more
                </span>
                <span
                  class="googlesitekit-icon-wrapper"
                  style="margin-left: 5px;"
                >
                  <svg />
                </span>
              </a>
            </p>
          </div>
          <div
            class="googlesitekit-activate-analytics-cta__actions"
          >
            <button
              class="mdc-button googlesitekit-activate-analytics-cta__button--secondary mdc-button--tertiary"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Maybe later
              </span>
            </button>
            <button
              class="mdc-button googlesitekit-activate-analytics-cta__button--primary googlesitekit-button-icon--spinner googlesitekit-button-icon--spinner__after mdc-button--raised"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Complete setup
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFunnelWidgetGA4 Chart Activate Analytics CTA with button "Set up Analytics" should render the CTA when Analytics is not active 1`] = `
<div>
  <div
    class="mdc-layout-grid googlesitekit-search-console-site-stats"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <div
          id="google-chart-mock"
        >
          Impressions
        </div>
      </div>
    </div>
  </div>
  <div
    class="mdc-layout-grid"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell"
      >
        <div
          class="googlesitekit-activate-analytics-cta"
        >
          <div
            class="googlesitekit-activate-analytics-cta__top"
          >
            <div
              class="googlesitekit-activate-analytics-cta__icon"
            >
              <svg />
            </div>
            <p
              class="googlesitekit-activate-analytics-cta__description"
            >
              See how many people visit your site from Search and track how you’re achieving your goals. 
              <a
                aria-label="Learn more (opens in a new tab)"
                class="googlesitekit-cta-link"
                href="https://sitekit.withgoogle.com/support/?doc=ga4"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Learn more
                </span>
                <span
                  class="googlesitekit-icon-wrapper"
                  style="margin-left: 5px;"
                >
                  <svg />
                </span>
              </a>
            </p>
          </div>
          <div
            class="googlesitekit-activate-analytics-cta__actions"
          >
            <button
              class="mdc-button googlesitekit-activate-analytics-cta__button--secondary mdc-button--tertiary"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Maybe later
              </span>
            </button>
            <button
              class="mdc-button googlesitekit-activate-analytics-cta__button--primary googlesitekit-button-icon--spinner googlesitekit-button-icon--spinner__after mdc-button--raised"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Set up Analytics
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFunnelWidgetGA4 Chart stats rendering should render Analytics Unique Visitors stats when selectedStats is 2 1`] = `
<div>
  <div
    class="mdc-layout-grid googlesitekit-analytics-site-stats"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <div
          id="google-chart-mock"
        >
          Unique Visitors
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFunnelWidgetGA4 Chart stats rendering should render Search Console Clicks stats when selectedStats is 1 1`] = `
<div>
  <div
    class="mdc-layout-grid googlesitekit-search-console-site-stats"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <div
          id="google-chart-mock"
        >
          Clicks
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFunnelWidgetGA4 Chart stats rendering should render Search Console Impressions stats when selectedStats is 0 1`] = `
<div>
  <div
    class="mdc-layout-grid googlesitekit-search-console-site-stats"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <div
          id="google-chart-mock"
        >
          Impressions
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFunnelWidgetGA4 Chart stats rendering when selectedStats is 3 should render the Analytics Key Events stats when canViewSharedAnalytics4 is true 1`] = `
<div>
  <div
    class="mdc-layout-grid googlesitekit-analytics-site-stats"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <div
          id="google-chart-mock"
        >
          Key Events
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFunnelWidgetGA4 Chart stats rendering when selectedStats is 4 should render the Analytics Engagement Rate % stats when canViewSharedAnalytics4 is true 1`] = `
<div>
  <div
    class="mdc-layout-grid googlesitekit-analytics-site-stats"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <div
          id="google-chart-mock"
        >
          Engagement Rate %
        </div>
      </div>
    </div>
  </div>
</div>
`;
